# ethos-academy

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  models.py  package-lock.json  package.json  pyproject.toml
.ralph/: .prd_validated  config.json  prd.json  prd.json.20260212-202023.bak  prd.json.20260214-013103.bak  signs.json
academy/: Dockerfile  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
api/: auth.py  main.py  rate_limit.py
config/: __init__.py  priorities.py
data/: rescore_ethos_logos.jsonl  rescore_pathos.jsonl
deploy/: Caddyfile  cloudformation.yml  setup-ec2.sh
docs/: aristotle-quotes.md  constitutional-alignment.md  ethos-framework-overview.md  ethos-overview.md  implementation-plan.md  lessons-learned-evaluation-bias.md
ethos/: __init__.py  agents.py  authenticity.py  context.py  daily_reports.py  evaluate.py  graph.py  graph_features.py  graph_insights.py  insights.py  mcp_server.py  models.py  notifications.py  patterns.py  phone_service.py  phone_verification.py  prompts.py  reflect.py  tools.py  visualization.py
ethos_academy/: __init__.py  agents.py  authenticity.py  context.py  crypto.py  daily_reports.py  email_service.py  embeddings.py  evaluate.py  graph_features.py  graph_insights.py  insights.py  mcp_server.py  models.py  notifications.py  patterns.py  phone_service.py  reflect.py  tools.py  visualization.py
graph/: service.py  write.py
identity/: __init__.py
scripts/: analyze_agents.py  backfill_messages.py  backfill_specialties.py  batch_eval.py  check-no-key-storage.sh  classify_specialties.py  curate_moltbook.py  export_csv.py  export_openapi.py  extract_conversations.py  fixup_alignment.py  import_jsonl.py  migrate_guardian_phone.py  migrate_model_labels.py  neo4j-backup.sh  neo4j_export.py  nightly_reflection.py  rescore_ethos_logos.py  rescore_pathos.py  run_conversations.py  run_exam.py  run_inference.py  scrape_moltbook.py  scrape_moltbook_million.py  seed_agents.py  seed_graph.py  test_critical_paths_e2e.py  test_full_enrollment_e2e.py  test_pathos_rubric.py  verify_graph.py
shared/: errors.py
taxonomy/: __init__.py  rubrics.py  (+3 more)
(+452 files in other folders)
