[project]
name = "ethos-academy"
version = "0.1.0"
description = "Better agents. Better data. Better alignment."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.79.0",
    "boto3>=1.35",
    "fastapi>=0.128.6",
    "fastmcp>=2.0,<3",
    "httpx>=0.28.1",
    "neo4j>=6.1.0",
    "openai>=1.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.40.0",
    "cryptography>=44.0",
]

[project.scripts]
ethos-mcp = "ethos_academy.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.11.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests that require live services (Neo4j, Anthropic API)",
]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "node_modules"]
skips = ["B101"]
